--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <title>React App</title>
     <style>
       table, th, td {
-        border: 1px solid black;
+        border: 1px solid rgb(0, 0, 0);
       }
     </style>
   </head>
